src/app/app.css
/*
* Error
*/
.NLT__error {
	color: red;
}

.NLT__overflow {
	overflow: auto;
}

/*
* Button
*/
.NLT__button {
	padding: 4px !important;
}

.NLT__button--sm {
	width: 50px;
}

.NLT__button--reset {
	padding: 0;
	border: 0;
	margin: 0;
}

/*
* Icon
*/
.NLT__icon-group {
	display: flex;
	align-items: center;
}

.NLT__icon--md {
	width: 1rem !important;
	height: 1rem !important;
}

/*
* Selectable and selected
*/
.NLT__selectable {
	cursor: pointer;
}

.NLT__selectable:hover {
	background-color: rgba(0, 0, 0, 0.1);
}

.NLT__selected {
	background-color: rgba(0, 0, 0, 0.15);
}

.NLT__selected:hover {
	background-color: rgba(0, 0, 0, 0.2);
}

/*
* Margin
*/
.NLT__margin-right {
	margin-right: 5px;
}

.NLT__margin-left {
	margin-left: 5px;
}

/*
* Table
*/
.NLT__hidden-column {
	border: 0 !important;
	width: 50px;
}

/*
* Paragraph
*/
.NLT__p {
	margin: 0;
}

/*
* Input
*/
.NLT__input {
	height: 100%;
	width: 100%;
	padding: 4px 10px !important;
	border: 0 !important;
}

.NLT__input--number {
	text-align: right;
}

/*
* Th Body
*/
.NLT__header-group {
	display: flex;
}

.NLT__header-content {
	margin-right: 5px;
	overflow: hidden;
	white-space: nowrap;
	text-overflow: ellipsis;
}

/*
* Menu
*/
.NLT__menu-container {
	position: relative;
}

.NLT__menu {
	position: absolute;
	padding: 0 !important;
	border-radius: 4px;
	background-color:var(--background-primary);
	border: 1px solid var(--background-modifier-border);
	box-shadow: 0 2px 8px var(--background-modifier-box-shadow);
	z-index: var(--layer-menu);
}

